fix: header jumping body when change position

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,10 @@
   height: 10px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .swiper,
 .swiper-container {
   padding: 30px 0 !important;
@@ -40,7 +44,7 @@ body {
 }
 
 main {
-  flex: 1; 
+  flex: 1;
 }
 
 @layer base {
